wrapping slider, fixes #14

--- a/templates/css/form.css
+++ b/templates/css/form.css
@@ -1,3 +1,6 @@
 .xoce-preview-image-container {
 	overflow: auto;
+	width: 100%;
+	height: 100%;
+	margin-bottom: 5px;
 }
